# MShogi

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  flake.nix  resources.qrc
include/: Board.h  ChessClock.h  GameConstants.h  GameEngine.h  GameScene.h  Movehistory.h  Piece.h  PieceItem.h  RuleEngine.h  UIController.h
res/: style.qss
src/: Board.cpp  CMakeLists.txt  ChessClock.cpp  GameEngine.cpp  GameScene.cpp  PieceItem.cpp  RuleEngine.cpp  UIController.cpp  main.cpp  movehistory.cpp
tests/: CMakeLists.txt  tst_board.cpp  tst_game.cpp  tst_ruleengine.cpp  tst_ui_gtest.cpp
